[tool.black]
line-length=100
target-version=["py39"]

[tool.isort]
profile = "black"
atomic=true
line_length = 100
lines_after_imports=2
lines_between_types=1
known_third_party=[
    "pytest",
    "click",
]
known_first_party=["system-baseline-backend"]

[tool.coverage.run]
branch = false
source = ["system-baseline-backend"]
omit = ["system-baseline-backend/tests/*",]

[tool.coverage.paths]
source = ["system-baseline-backend/"]

[tool.coverage.report]
fail_under = 73
skip_covered = true
show_missing = true

[tool.pytest.ini_options]
minversion = "6.2.1"
addopts = "-s --tb=native --cov=."
testpaths = "./tests"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning'
    ]

[tool.poetry]
name = "system-baseline-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
connexion = {extras = ["swagger-ui"], version = "==2.5.1"}
Flask = "==1.1.4"
gunicorn = "20.1.0"
prometheus_client = "0.16.0"
boto3 = "1.26.87"
watchtower = "3.0.1"
flask-sqlalchemy = "2.5.1"
sqlalchemy = "1.4.46"
alembic = "1.10.2"
flask-script = "2.0.6"
flask-migrate = "4.0.4"
bitmath = "1.3.3.1"
jsonpatch = "1.32"
insights-core = "*"
kerlescan = {git = "https://github.com/RedHatInsights/kerlescan.git", rev = "0.101", develop = true}
app-common-python = "0.2.5"
unleashclient = "5.5.0"
jsonschema = "==3.2.0"
markupsafe = "==2.0.1"
psycopg2 = "2.9.5"


[tool.poetry.group.dev.dependencies]
openapi-spec-validator = "0.4.0"
coverage = "7.2.1"
flake8 = "5.0.4"
mock = "5.0.1"
responses = "0.22.0"
yamllint = "==1.26.0"
black = "==21.6b0"
ipdb = "0.13.11"
podman-compose = "1.0.3"
python-semantic-release = "7.33.2"
pytest = "7.2.2"
pytest-cov = "4.0.0"
pytest-flask = "1.2.0"
pytest-black = "0.3.12"
pytest-mock = "3.10.0"
toml = "0.10.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
